--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,5 +1,5 @@
-<div>
-  <% @students.each do |student| %>
-    <div><%= student.first_name + " " + student.last_name %></div>
-  <% end %>
-</div>
+<% @students.each do |student| %>
+<ul>
+  <li><%= "#{student.first_name} #{student.last_name}" %></li>
+</ul>
+<% end %>
